Updated code for better handling

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,14 @@
-groupId= localConsumer
-bootstrapUrls= ["localhost:29092"]
-props={
+databaseConfig{
+  url= "jdbc:postgresql://localhost:5432/localDb"
+  username = "dbuser"
+  password = "dbsecret"
 }
-chunkSize= 10
-dlqTopicName= dlqTopic
-topics = ["someTopics"]
+kafkaConfiguration{
+  groupId= localConsumer
+  bootstrapUrls= ["localhost:29092"]
+  props={
+  }
+  chunkSize= 10
+  dlqTopicName= dlqTopic
+  topics = ["someTopics"]
+}
